; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/tcop/extr_postgres.c_drop_unnamed_stmt.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/tcop/extr_postgres.c_drop_unnamed_stmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@unnamed_stmt_psrc = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @drop_unnamed_stmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drop_unnamed_stmt() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32*, i32** @unnamed_stmt_psrc, align 8
  %3 = icmp ne i32* %2, null
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load i32*, i32** @unnamed_stmt_psrc, align 8
  store i32* %5, i32** %1, align 8
  store i32* null, i32** @unnamed_stmt_psrc, align 8
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @DropCachedPlan(i32* %6)
  br label %8

8:                                                ; preds = %4, %0
  ret void
}

declare dso_local i32 @DropCachedPlan(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
